--- a/_4337Project/4337Project/packages.config
+++ b/_4337Project/4337Project/packages.config
@@ -1,15 +1,31 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DocumentFormat.OpenXml" version="3.3.0" targetFramework="net48" />
+  <package id="DocumentFormat.OpenXml.Framework" version="3.3.0" targetFramework="net48" />
   <package id="EPPlus" version="7.6.0" targetFramework="net48" />
   <package id="EPPlus.Interfaces" version="7.5.0" targetFramework="net48" />
   <package id="EPPlus.System.Drawing" version="7.5.0" targetFramework="net48" />
   <package id="ExcelDataReader" version="3.7.0" targetFramework="net48" />
   <package id="ExcelDataReader.DataSet" version="3.7.0" targetFramework="net48" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="9.0.2" targetFramework="net48" />
   <package id="Microsoft.IO.RecyclableMemoryStream" version="3.0.1" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
+  <package id="SkiaSharp" version="2.88.8" targetFramework="net48" />
+  <package id="SkiaSharp.NativeAssets.macOS" version="2.88.8" targetFramework="net48" />
+  <package id="SkiaSharp.NativeAssets.Win32" version="2.88.8" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net48" />
   <package id="System.Drawing.Common" version="8.0.4" targetFramework="net48" />
+  <package id="System.IO.Pipelines" version="9.0.2" targetFramework="net48" />
   <package id="System.Memory" version="4.5.5" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
+  <package id="System.Text.Encodings.Web" version="9.0.2" targetFramework="net48" />
+  <package id="System.Text.Json" version="9.0.2" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
+  <package id="Xceed.Document.NET" version="4.0.25103.5784" targetFramework="net48" />
+  <package id="Xceed.Drawing.NET" version="1.0.25103.5784" targetFramework="net48" />
+  <package id="Xceed.Pdf" version="4.0.25103.5784" targetFramework="net48" />
+  <package id="Xceed.Words.NET" version="4.0.25103.5784" targetFramework="net48" />
 </packages>
